8077308: Fix warning: increase O_BUFLEN in ostream.hpp -- output truncated

Reviewed-by: dholmes, hseigel